--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csharp-binary-stream",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Library compatible with C#'s BinaryReader class",
   "main": "dist/index.js",
   "files": [
@@ -11,7 +11,7 @@
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "clean": "rm -rf dist",
     "build": "tsc",
-    "docs": "typedoc --options typedoc.ts",
+    "docs": "typedoc --options typedoc.ts && node docs-clean.js",
     "lint": "eslint test/**/*.ts src/**/*.ts",
     "lint-fix": "eslint --fix test/**/*.ts src/**/*.ts",
     "prepare-publish": "npm run clean && npm run lint && npm run build && npm run docs"
@@ -39,6 +39,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "mocha": "^6.0.2",
+    "replace-in-file": "^3.4.4",
     "ts-node": "^8.0.3",
     "typedoc": "^0.14.2",
     "typedoc-twilio-theme": "^1.0.0",
