Removed rood dir from tsconfig to avoid IDE reporting problems in test files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
 		"declaration": true,
 		"allowJs": false,
 		"strict": true,
-		"strictNullChecks": false,
-		"rootDir": "src"
+		"strictNullChecks": false
 	},
 	"include": [
 		"./src"
