--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha -r ts-node/register test/**/*.test.ts",
     "clean": "rm -rf dist",
     "build": "tsc",
-    "docs": "typedoc --options typedoc.ts && node docs-clean.js",
+    "docs": "typedoc --options typedoc.config.js && node docs-clean.js",
     "lint": "eslint test/**/*.ts src/**/*.ts",
     "lint-fix": "eslint --fix test/**/*.ts src/**/*.ts",
     "prepare-publish": "npm run clean && npm run lint && npm run build && npm run docs"
