--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "test": "mocha -r ts-node/register -p tsconfig.test.json test/**/*.test.ts",
     "clean": "rm -rf dist",
-    "build": "tsc",
+    "build": "npx tsc",
     "docs": "typedoc --options typedoc.config.js && node docs-clean.js",
     "lint": "eslint test/**/*.ts src/**/*.ts",
     "lint-fix": "eslint --fix test/**/*.ts src/**/*.ts",
@@ -30,6 +30,7 @@
     "url": "git@github.com:EvidentlyCube/chsarp-binary-stream.git"
   },
   "devDependencies": {
+    "@stryker-mutator/mocha-runner": "^9.0.1",
     "@types/big-integer": "0.0.31",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
@@ -40,7 +41,7 @@
     "eslint": "^9.27.0",
     "mocha": "^11.5.0",
     "replace-in-file": "^3.4.4",
-    "ts-node": "^8.5.2",
+    "ts-node": "^8.10.2",
     "typedoc": "^0.28.5",
     "typedoc-twilio-theme": "^1.0.0",
     "typescript": "^5.8.3"
